and another scss fix

--- a/_sass/theme/mixins.scss
+++ b/_sass/theme/mixins.scss
@@ -510,7 +510,7 @@ header .uk-sticky-fixed {
   }
 
   .header-wrapper {
-    height: calc(100% - #{$navbar-nav-item-height * 2});
+    height: (100% - #{$navbar-nav-item-height * 2});
   }
 
   .height-large {
