--- a/_includes/section-last-week.html
+++ b/_includes/section-last-week.html
@@ -9,7 +9,7 @@
 <div class="uk-container uk-margin-medium-bottom">
   <div class="uk-child-width-1-2@s uk-child-width-expand@l uk-grid-medium uk-flex-center uk-grid-divider" data-uk-grid>
     {% for post in site.posts %}
-    {% if post.tags contains 'last-week' %}
+    {% if post.tags contains 'previous-weeks' %}
     {% include content-media-top.html %}
     {% endif %}
     {% endfor %}
